--- a/style.scss
+++ b/style.scss
@@ -27,7 +27,7 @@ section {
 
 .custom-element-container {
    display: grid;
-   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
    gap: 2rem;
    place-items: center;
 }
