--- a/style.scss
+++ b/style.scss
@@ -28,7 +28,7 @@ section {
    & > mat-card {
       padding: 2rem;
       h2 {
-         margin: 0;
+         margin: 0 0 2rem 0;
       }
    }
 }
