more doc + mat-img

--- a/style.scss
+++ b/style.scss
@@ -39,3 +39,13 @@ section {
    gap: 2rem;
    place-items: center;
 }
+
+.image-container {
+   text-align: center;
+
+   &--unavailable {
+      mat-img {
+         border: 1px solid black;
+      }
+   }
+}
