--- a/style.scss
+++ b/style.scss
@@ -36,9 +36,10 @@ section {
 
 .custom-element-container {
    display: grid;
-   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-   gap: 2rem;
+   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+   gap: 5rem;
    place-items: center;
+   margin-top: 2rem;
 }
 
 .image-container {
