--- a/style.scss
+++ b/style.scss
@@ -15,8 +15,7 @@ body {
 header {
    background-color: #333;
    color: #eee;
-   box-shadow: 0 3px 5px -1px rgba(0, 0, 0, 0.2),
-      0 6px 10px 0 rgba(0, 0, 0, 0.14), 0 1px 18px 0 rgba(0, 0, 0, 0.12);
+   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
    & > h1 {
       margin: 0;
       padding: 1.4rem;
