--- a/style.scss
+++ b/style.scss
@@ -22,6 +22,14 @@ header {
    }
 }
 
+main {
+   padding: 2rem;
+}
+
+section-card {
+   margin-top: 4rem;
+}
+
 .image-container {
    text-align: center;
 
